feat: validator, investor retrieve
